--- a/src/train/requirements.txt
+++ b/src/train/requirements.txt
@@ -1,3 +1,9 @@
+joblib==1.4.2
+numpy==1.24.4
+opencv_contrib_python==4.11.0.86
+opencv_python==4.11.0.86
 PyYAML==6.0.2
 PyYAML==6.0.2
+scikit_learn==1.3.2
 ultralytics==8.3.116
+wandb==0.19.11
