api y train docker-compose. Añadido enviroment

--- a/src/.env
+++ b/src/.env
@@ -11,3 +11,5 @@ MODEL_PATH = "model/best.pt"
 N_CLASSES = "6"
 #SIGNS = ["Aterrizar", "Desactivar", "Recce1", "Recce2", "Recce3", "Strike"]
 SIGNS = ["1Dedo", "2Dedos", "3Dedos", "Mano Abierta", "Manos Arriba", "Puño"]
+
+WANDB_API_KEY = "2d1cd8eedf9861e111c171ed732b3fe205d059f3"
