--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -4,8 +4,18 @@ services:
     build:
       context: ./api
       dockerfile: Dockerfile
-    env_file:
-      - .env
+    ports:
+      -"8000:8000"
+    environment:
+      - API_PORT: 8000
+      - WANDB_API_KEY: ${WANDB_API_KEY}
+      - WANDB_ARTIFACT_PATH: ${WANDB_ARTIFACT_PATH}
+    healthcheck:
+      test: ["executable", "arg"]
+      interval: 1m30s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
   capture:
     image: capture:latest
     build:
@@ -18,5 +28,15 @@ services:
     build:
       context: ./train
       dockerfile: Dockerfile
-    env_file:
-      - .env
+    ports:
+      -"8000:8000"
+    environment:
+      - API_PORT: 8000
+      - WANDB_API_KEY: ${WANDB_API_KEY}
+      - WANDB_ARTIFACT_PATH: ${WANDB_ARTIFACT_PATH}
+    healthcheck:
+      test: ["executable", "arg"]
+      interval: 1m30s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
