Carga el dataset de wandb

--- a/src/.env
+++ b/src/.env
@@ -1,15 +1,13 @@
 # Configuración de la cámara (OpenCV)
-CAMERA_INDEX = "0"
-FRAME_WIDTH = "640"
-FRAME_HEIGHT = "480"
-
-# Configuración de la carpeta de datos y el modelo
-DATA_FOLDER = "images"
-MODEL_PATH = "model/best.pt"
+CAMERA_INDEX="0"
+FRAME_WIDTH="640"
+FRAME_HEIGHT="480"
 
 # Número de clases para la clasificación
-N_CLASSES = "6"
-#SIGNS = ["Aterrizar", "Desactivar", "Recce1", "Recce2", "Recce3", "Strike"]
-SIGNS = ["1Dedo", "2Dedos", "3Dedos", "Mano Abierta", "Manos Arriba", "Puño"]
+N_CLASSES="6"
+#SIGNS=["Aterrizar", "Desactivar", "Recce1", "Recce2", "Recce3", "Strike"]
+SIGNS=["1Dedo", "2Dedos", "3Dedos", "Mano Abierta", "Manos Arriba", "Puño"]
 
-WANDB_API_KEY = "2d1cd8eedf9861e111c171ed732b3fe205d059f3"
+WANDB_API_KEY="2d1cd8eedf9861e111c171ed732b3fe205d059f3"
+WANDB_DATASET="a-fuentesr-universidad-politecnica-de-madrid/Deteccion_de_gestos/gestures_dataset:latest"
+WANDB_MODEL="a-fuentesr-universidad-politecnica-de-madrid/Deteccion_de_gestos/gestures_model:latest"
