--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,27 +17,11 @@ jobs:
           filters: |
             api:
               - 'project/src/api/**'
-    
-  test:
-    runs-on: ubuntu-latest
-    needs: detect-changes
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install docker-compose
-        run: |
-          curl -SL https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
-          chmod +x /usr/local/bin/docker-compose
-          docker-compose version
-      - name: Run tests
-        run: |
-          WANDB_API_KEY="${{secrets.WANDB_API_KEY}}" \
-          WANDB_ARTIFACT_PATH="${{secrets.WANDB_ARTIFACT_PATH}}" \
-          docker-compose -f ./project/src/docker-compose.yml up --abort-on-container-exit test
 
 # ----------------- BUILD API ------------------
   build-api:
     runs-on: ubuntu-latest
-    needs: [test, detect-changes]
+    needs: [detect-changes]
     if: ${{needs.detect-changes.outputs.api == 'true'}}
     steps:
       - uses: actions/checkout@v3
