--- a/src/.env
+++ b/src/.env
@@ -1,13 +1,16 @@
 # Configuración de la cámara (OpenCV)
-CAMERA_INDEX = "0"
-FRAME_WIDTH = "640"
-FRAME_HEIGHT = "480"
+CAMERA_INDEX="0"
+FRAME_WIDTH="640"
+FRAME_HEIGHT="480"
 
 # Configuración de la carpeta de datos y el modelo
-DATA_FOLDER = "images"
-MODEL_PATH = "model/best.pt"
+MODEL_PATH="src/api/best.pt"
 
 # Número de clases para la clasificación
-N_CLASSES = "6"
-#SIGNS = ["Aterrizar", "Desactivar", "Recce1", "Recce2", "Recce3", "Strike"]
-SIGNS = ["1Dedo", "2Dedos", "3Dedos", "Mano Abierta", "Manos Arriba", "Puño"]
+N_CLASSES="6"
+#SIGNS='["Aterrizar", "Desactivar", "Recce1", "Recce2", "Recce3", "Strike"]'
+SIGNS='["1Dedo", "2Dedos", "3Dedos", "Mano Abierta", "Manos Arriba", "Puño"]'
+
+WANDB_API_KEY="2d1cd8eedf9861e111c171ed732b3fe205d059f3"
+DATA_PATH="/app/images"
+OUTPUT_FOLDER="/app/yolo_dataset"
