--- a/src/capture/requirements.txt
+++ b/src/capture/requirements.txt
@@ -3,3 +3,6 @@ mediapipe==0.10.11
 numpy==1.24.4
 opencv_contrib_python==4.11.0.86
 opencv_python==4.11.0.86
+PyYAML==6.0.2
+PyYAML==6.0.2
+wandb==0.19.11
