--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -24,3 +24,11 @@ services:
       - "8000:8000"
     env_file:
       - .env
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities:
+                - gpu
