--- a/src/.env
+++ b/src/.env
@@ -1,7 +1,7 @@
 # Configuración de la cámara (OpenCV)
-CAMERA_INDEX="0"
-FRAME_WIDTH="640"
-FRAME_HEIGHT="480"
+CAMERA_INDEX=0
+FRAME_WIDTH=640
+FRAME_HEIGHT=480
 
 # Configuración de la carpeta de datos y el modelo
 MODEL_PATH="src/api/best.pt"
@@ -14,3 +14,4 @@ SIGNS='["1Dedo", "2Dedos", "3Dedos", "Mano Abierta", "Manos Arriba", "Puño"]'
 WANDB_API_KEY="2d1cd8eedf9861e111c171ed732b3fe205d059f3"
 DATA_PATH="/app/images"
 OUTPUT_FOLDER="/app/yolo_dataset"
+
