--- a/src/.env
+++ b/src/.env
@@ -15,3 +15,5 @@ WANDB_API_KEY="2d1cd8eedf9861e111c171ed732b3fe205d059f3"
 DATA_PATH="/app/images"
 OUTPUT_FOLDER="/app/yolo_dataset"
 
+WANDB_DATASET="a-fuentesr-universidad-politecnica-de-madrid/Deteccion_de_gestos/gestures_dataset:latest"
+WANDB_MODEL="a-fuentesr-universidad-politecnica-de-madrid/Deteccion_de_gestos/svm_model:latest"
