carga el dataset desde un volumen de docker

--- a/src/.env
+++ b/src/.env
@@ -8,6 +8,8 @@ N_CLASSES="6"
 #SIGNS=["Aterrizar", "Desactivar", "Recce1", "Recce2", "Recce3", "Strike"]
 SIGNS=["1Dedo", "2Dedos", "3Dedos", "Mano Abierta", "Manos Arriba", "Puño"]
 
+YOLO_DATASET=/app/yolo_dataset/data.yaml
+
 WANDB_API_KEY="2d1cd8eedf9861e111c171ed732b3fe205d059f3"
 WANDB_DATASET="a-fuentesr-universidad-politecnica-de-madrid/Deteccion_de_gestos/gestures_dataset:latest"
 WANDB_MODEL="a-fuentesr-universidad-politecnica-de-madrid/Deteccion_de_gestos/gestures_model:latest"
