--- a/src/.env
+++ b/src/.env
@@ -4,16 +4,20 @@ FRAME_WIDTH=640
 FRAME_HEIGHT=480
 
 # Configuración de la carpeta de datos y el modelo
-MODEL_PATH="src/api/best.pt"
+MODEL_PATH=src/api/best.pt
 
 # Número de clases para la clasificación
-N_CLASSES="6"
-#SIGNS='["Aterrizar", "Desactivar", "Recce1", "Recce2", "Recce3", "Strike"]'
-SIGNS='["1Dedo", "2Dedos", "3Dedos", "Mano Abierta", "Manos Arriba", "Puño"]'
+N_CLASSES=6
+#SIGNS=["Aterrizar", "Desactivar", "Recce1", "Recce2", "Recce3", "Strike"]
+SIGNS=["1Dedo", "2Dedos", "3Dedos", "Mano Abierta", "Manos Arriba", "Puño"]
 
-WANDB_API_KEY="2d1cd8eedf9861e111c171ed732b3fe205d059f3"
-DATA_PATH="/app/images"
-OUTPUT_FOLDER="/app/yolo_dataset"
+API_PORT=8001
+API_HOST=api
+WEB_APP_PORT=8080
 
-WANDB_DATASET="a-fuentesr-universidad-politecnica-de-madrid/Deteccion_de_gestos/gestures_dataset:latest"
-WANDB_MODEL="a-fuentesr-universidad-politecnica-de-madrid/Deteccion_de_gestos/svm_model:latest"
+WANDB_API_KEY=2d1cd8eedf9861e111c171ed732b3fe205d059f3
+DATA_PATH=/app/images
+OUTPUT_FOLDER=/app/yolo_dataset
+
+WANDB_DATASET=a-fuentesr-universidad-politecnica-de-madrid/Deteccion_de_gestos/gestures_dataset:latest
+WANDB_MODEL=a-fuentesr-universidad-politecnica-de-madrid/Deteccion_de_gestos/svm_model:v0
