--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -1,4 +1,9 @@
+fastapi==0.115.12
+joblib==1.4.2
 mediapipe==0.10.11
-python-dotenv==1.0.1
-ultralytics==8.3.145
+opencv_contrib_python==4.11.0.86
+opencv_python==4.11.0.86
+scikit_learn==1.3.2
+uvicorn==0.33.0
 wandb==0.19.11
+python-multipart==0.0.6
