--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,53 +5,27 @@ on:
       - develop
 
 jobs:
-  detect-changes:
-    runs-on: ubuntu-latest
-    outputs:
-      api: ${{ steps.filter.outputs.api }}
-    steps:
-      - uses: actions/checkout@v3
-      - id: filter
-        uses: dorny/paths-filter@v3
-        with:
-          filters: |
-            api:
-              - '/src/api/**'
-
-# ----------------- BUILD API ------------------
-  build-api:
-    runs-on: ubuntu-latest
-    needs: [detect-changes]
-    if: ${{needs.detect-changes.outputs.api == 'true'}}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: Docker login
-        run: az acr login --name ${{ vars.AZURE_ACR_NAME }}
-      - name: Build and push API image
-        run: |
-          docker build -t ${{ vars.AZURE_ACR_NAME}}.azurecr.io/api:ci ./src/api
-          docker push ${{ vars.AZURE_ACR_NAME}}.azurecr.io/api:ci
-
-# ----------------- DEPLOY ------------------
   deploy:
     runs-on: ubuntu-latest
-    needs: [build-api]
-    if: ${{ always() && (needs.build-api.result == 'success') }}
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: azure/login@v1
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Azure Login
+        uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: Prepare docker-compose.prod.yml
+
+      - name: Deploy Docker Compose to Azure WebApp
         run: |
-          cd /src
-          cp docker-compose.prod.yml docker-compose.yml
-          zip deploy.zip docker-compose.yml
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with: 
-          app-name: ${{ vars.AZURE_WEBAPP_NAME }}
-          package: /src/deploy.zip
+          az webapp config container set \
+            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+            --name ${{ secrets.AZURE_WEBAPP_NAME }} \
+            --multicontainer-config-type compose \
+            --multicontainer-config-file docker-compose.prod.yml
+      - name: Restart Web App
+        run: |
+          az webapp restart \
+            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+            --name ${{ secrets.AZURE_WEBAPP_NAME }}
