--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
             --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
             --name ${{ secrets.AZURE_WEBAPP_NAME }} \
             --multicontainer-config-type compose \
-            --multicontainer-config-file docker-compose.prod.yml
+            --multicontainer-config-file src/docker-compose.prod.yml
       - name: Restart Web App
         run: |
           az webapp restart \
