--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,36 +1,76 @@
-name: CI/CD for Develop Branch
-on: 
+name: CI‑CD–Test, Build & Deploy to Azure
+
+on:
   push:
-    branches:
-      - ApiDocker
+    branches: [ApiDocker]
 
 jobs:
+  detect-changes:
+    runs-on: ubuntu-latest
+    outputs:
+      api: ${{ steps.filter.outputs.api }}
+      web: ${{ steps.filter.outputs.web }}
+    steps:
+      - uses: actions/checkout@v3
+      - id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            api:
+              - 'project/src/api/**'
+            web:
+              - 'project/src/frontend/**'
+  # ‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑ BUILD API ‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑
+  build-api:
+    runs-on: ubuntu-latest
+    needs: [detect-changes]
+    if: ${{ needs.detect-changes.outputs.api == 'true' }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1
+        with:
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Docker login
+        run: az acr login --name ${{ vars.AZURE_ACR_NAME }}
+      - name: Build & push API image
+        run: |
+          docker build -t ${{ vars.AZURE_ACR_NAME }}.azurecr.io/api:ci ./project/src/api
+          docker push ${{ vars.AZURE_ACR_NAME }}.azurecr.io/api:ci
+
+  # ‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑ BUILD WEB ‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑
+  build-web:
+    runs-on: ubuntu-latest
+    needs: [detect-changes]
+    if: ${{ needs.detect-changes.outputs.web == 'true' }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1
+        with:
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Docker login
+        run: az acr login --name ${{ vars.AZURE_ACR_NAME }}
+      - name: Build & push Web image
+        run: |
+          docker build -t ${{ vars.AZURE_ACR_NAME }}.azurecr.io/web:ci ./project/src/frontend
+          docker push ${{ vars.AZURE_ACR_NAME }}.azurecr.io/web:ci
+
+  # ‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑ DEPLOY ‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑‑
   deploy:
     runs-on: ubuntu-latest
-
+    needs: [build-api, build-web]
+    if: ${{ always() && (needs.build-api.result == 'success' || needs.build-web.result == 'success') }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Azure Login
-        uses: azure/login@v1
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1
+        with: 
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Prepare docker‑compose.prod.yml
+        run: |
+          cd project/src
+          cp docker-compose.prod.yml docker-compose.yml
+          zip deploy.zip docker-compose.yml
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-      
-      - name: Debug RG & App
-        run: |
-          echo "Resource Group: ${{ secrets.AZURE_RESOURCE_GROUP }}"
-          echo "App Service  : ${{ secrets.AZURE_WEBAPP_NAME }}"
-
-      - name: Deploy Docker Compose to Azure WebApp
-        run: |
-          az webapp config container set \
-            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-            --name ${{ secrets.AZURE_WEBAPP_NAME }} \
-            --multicontainer-config-type compose \
-            --multicontainer-config-file src/docker-compose.prod.yml
-      - name: Restart Web App
-        run: |
-          az webapp restart \
-            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-            --name ${{ secrets.AZURE_WEBAPP_NAME }}
+          app-name: ${{ vars.AZURE_WEBAPP_NAME }}
+          package: ./project/src/deploy.zip
